<resources>
    <string name="tools_qm_note">Note</string>
    <string name="tools_qm_add_note">Add Comment</string>
    <string name="tools_qm_view_note">View Comment</string>
    <string name="tools_qm_appearance">Style</string>
    <string name="tools_qm_textmarkup_type">Type</string>
    <string name="pref_colormode_custom_text_color">Text color</string>
    <string name="tools_qm_color">Color</string>
    <string name="tools_qm_stroke_color">Border color</string>
    <string name="tools_qm_fill_color">Fill color</string>
    <string name="tools_qm_thickness">Thickness</string>
    <string name="tools_qm_opacity">Opacity</string>
    <string name="tools_qm_reply">Reply</string>
    <string name="tools_qm_copy_to_clipboard">Copy to Clipboard</string>
    <string name="tools_qm_sign_and_save">Sign and Save</string>
    <string name="tools_qm_field_signed">Field is digitally signed</string>
    <string name="tools_qm_copy">Copy</string>
    <string name="tools_qm_copy_text">Copy Text</string>
    <string name="tools_qm_shape">Shapes&#8230;</string>
    <string name="tools_qm_free_text" translatable="false">@string/annot_free_text</string>
    <string name="tools_qm_strikeout" translatable="false">@string/annot_strikeout</string>
    <string name="tools_qm_highlight" translatable="false">@string/annot_highlight</string>
    <string name="tools_qm_underline" translatable="false">@string/annot_underline</string>
    <string name="tools_qm_squiggly" translatable="false">@string/annot_squiggly</string>
    <string name="tools_qm_redact" translatable="false">@string/annot_redact</string>
    <string name="tools_qm_redaction" translatable="false">@string/annot_redaction</string>
    <string name="tools_qm_line" translatable="false">@string/annot_line</string>
    <string name="tools_qm_link" translatable="false">@string/annot_link</string>
    <string name="tools_qm_arrow" translatable="false">@string/annot_arrow</string>
    <string name="tools_qm_ruler" translatable="false">@string/annot_ruler</string>
    <string name="tools_qm_callout" translatable="false">@string/annot_callout</string>
    <string name="tools_qm_polyline" translatable="false">@string/annot_polyline</string>
    <string name="tools_qm_polygon" translatable="false">@string/annot_polygon</string>
    <string name="tools_qm_cloud" translatable="false">@string/annot_cloud</string>
    <string name="tools_qm_rectangle" translatable="false">@string/annot_square</string>
    <string name="tools_qm_ellipse" translatable="false">@string/annot_circle</string>
    <string name="tools_qm_signature" translatable="false">@string/annot_signature</string>
    <string name="tools_qm_eraser">Eraser</string>
    <string name="tools_qm_use_saved_sig">Use Default Signature</string>
    <string name="tools_qm_new_signature">New Signature</string>
    <string name="tools_qm_form_create">Forms&#8230;</string>
    <string name="tools_qm_attach">Attach&#8230;</string>
    <string name="tools_qm_sound">Record audio</string>
    <string name="tools_qm_attach_file">Attach file</string>
    <string name="tools_qm_play_sound">Play audio</string>
    <string name="tools_qm_group_select">Group select</string>
    <string name="tools_qm_form_text">Text field</string>
    <string name="tools_qm_form_checkbox">Checkbox</string>
    <string name="tools_qm_form_radio_group">Radio Group</string>
    <string name="tools_qm_form_radio_add_item">Add item</string>
    <string name="tools_qm_flatten">Flatten</string>
    <string name="tools_qm_open_attachment">Open Attachment</string>
    <string name="tools_qm_define">Define</string>
    <string name="tools_qm_translate">Translate</string>
    <string name="tools_qm_text_to_speech">Read</string>
    <string name="tools_qm_stamper">Image</string>
    <string name="tools_qm_rubber_stamp" translatable="false">@string/annot_stamp</string>
    <string name="tools_qm_rotate">Rotate</string>
    <string name="tools_qm_paste">Paste</string>
    <string name="tools_qm_edit">Edit</string>
    <string name="tools_qm_open_link">Go</string>
    <string name="tools_qm_tools">Tools</string>
    <string name="tools_qm_back">Back</string>
    <string name="tools_annot_style_preview_text">Abcde</string>
    <string name="tools_copy_confirmation">Copied to clipboard</string>
    <string name="tools_copy_annot_confirmation">Copied annotation to clipboard</string>
    <string name="tools_copy_annot_teach">Press Ctrl+V to paste where the cursor is</string>
    <string name="tools_copy_annot_waiting">Copying annotation to clipboard, please wait&#8230;</string>
    <string name="tools_paste_annot_waiting">Pasting annotation from clipboard, please wait&#8230;</string>
    <string name="tools_share_title">Share selected text</string>
    <string name="tools_share_subject">Selected text from: </string>
    <string name="tools_ruler_scale">Scale</string>
    <string name="unit_cm" translatable="false">cm</string>
    <string name="unit_inch" translatable="false">inch</string>
    <string name="unit_yard" translatable="false">yard</string>
    <string-array name="ruler_base_unit">
        <item>@string/unit_cm</item>
        <item>@string/unit_inch</item>
    </string-array>
    <string-array name="ruler_translate_unit">
        <item>@string/unit_cm</item>
        <item>@string/unit_inch</item>
        <item>@string/unit_yard</item>
    </string-array>
    <string name="tools_dialog_colorpicker_title">Pick a Color</string>
    <string name="tools_dialog_formfilltext_title">Text Field Content</string>
    <string name="tools_dialog_textsearch_title">Text Search Options</string>
    <string name="tools_dialog_textsearch_wholeword">Whole word</string>
    <string name="tools_dialog_textsearch_case_sensitive">Case sensitive</string>
    <string name="tools_dialog_textsearch_regexp">Regular expressions</string>
    <string name="tools_dialog_textsearch_nothing_found">Nothing was found</string>
    <string name="tools_dialog_textsearch_invalid_string">Invalid search string</string>
    <string name="tools_dialog_textsearch_search_canceled">Text search canceled</string>
    <string name="error_has_xfa_forms_message">The file contains proprietary XFA extensions and can\'t be opened.</string>
    <string name="error_has_portfolio_message">Portfolio documents cannot be added to this document.</string>
    <string name="tools_digitalsignature_error_invalid_image_path">Error while applying appearance (invalid image file path); file not signed.</string>
    <string name="tools_digitalsignature_error_appearance">Error while applying appearance; file not signed.</string>
    <string name="tools_digitalsignature_use_appearance">Use Appearance</string>
    <string name="tools_digitalsignature_msg_saved">Saved \"%1$s\"</string>
    <string name="tools_digitalsignature_msg_file_locked">Failed to save: file is locked for writing</string>
    <string name="tools_digitalsignature_msg_failed_to_save">Failed to save the file: %1$s</string>
    <string name="tools_digitalsignature_text_1">You can use the space below to draw you signature, or just click the \"Pick image&#8230;\" button to use an image instead.</string>
    <string name="tools_digitalsignature_text_2">By clicking "Sign and Save" the document will be digitally signed using a pre-existent certificate and password, and saved. If you prefer to just add the signature to the field and digitally sign it later, click \"Use Appearance\". Using just the appearance will allow you to further change the thickness and color of the signature.</string>
    <string name="tools_digitalsignature_pick_image">Pick image&#8230;</string>
    <string name="tools_digitalsignature_erase">Erase</string>
    <string name="tools_digitalsignature_adding_signature">Adding a signature&#8230;</string>
    <string name="tools_digitalsignature_choose_image">Choose an image for the signature&#8230;</string>
    <string name="tools_digitalsignature_field_already_signed">This field is already signed. Below some information about the signature entry:</string>
    <string name="tools_digitalsignature_location">Location:</string>
    <string name="tools_digitalsignature_reason">Reason:</string>
    <string name="tools_digitalsignature_name">Name:</string>
    <string name="tools_digitalsignature_signature_info">Signature Info</string>
    <string name="tools_richmedia_playback_end">End of video playback</string>
    <string name="tools_richmedia_error_extracting_media">Error while extracting embedded media</string>
    <string name="tools_richmedia_unsupported_format">Unsupported media format</string>
    <string name="tools_richmedia_please_wait_loading">Please wait while loading&#8230;</string>
    <string name="tools_dialog_floating_sig_checkbox_default">Save As Default Signature</string>
    <string name="tools_dialog_floating_sig_sign_here">Sign Here</string>
    <string name="tools_dialog_floating_sig_msg_overwrite_signature">Are you sure you want to overwrite the current signature with a new one?</string>
    <string name="tools_dialog_floating_sig_msg_delete_signature">This will delete the current signature. Are you sure you wish to proceed?</string>
    <string name="tools_dialog_flatten_dialog_title">Flatten this annotation?</string>
    <string name="tools_dialog_flatten_dialog_msg">Flattening the annotation will make it a permanent part of the PDF, so that it cannot be modified or removed by standard viewing software. This can be undone. </string>
    <string name="tools_dialog_simple_color_picker_btn_description_red">Red Color</string>
    <string name="tools_misc_close">Close</string>
    <string name="dialog_external_link">Link to a website</string>
    <string name="dialog_internal_link">Link to a page in this PDF</string>
    <string name="dialog_link_example" translatable="false">www.example.com</string>
    <string name="controls_annotation_toolbar_tool_description_freehand">Freehand Tool</string>
    <string name="controls_annotation_toolbar_tool_description_free_highlighter">Free Highlighter Tool</string>
    <string name="controls_annotation_toolbar_tool_description_image">Image Tool</string>
    <string name="controls_annotation_toolbar_tool_description_stamp">Stamp Tool</string>
    <string name="controls_annotation_toolbar_tool_description_signature">Signature Tool</string>
    <string name="controls_misc_rename">Rename</string>
    <string name="action_match_case">Match Case</string>
    <string name="action_whole_word">Whole Word</string>
    <string name="custom_stamp_text_hint">Enter stamp text</string>
    <string name="custom_stamp_pointing_left">Pointing left</string>
    <string name="custom_stamp_pointing_right">Pointing right</string>
    <string name="custom_stamp_rounded_rectangle">Rounded rectangle</string>
    <string name="custom_stamp_new">New custom stamp</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="shape">Shape</string>
    <string name="dialog_password_message">This file is password protected, please enter the password below.</string>
    <string name="show_password_option">Show Password</string>
    <string name="undo_redo_annot_remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="merge">Merge</string>
    <string name="password">Password</string>
    <string name="num_1" translatable="false">1</string>
    <string name="num_2" translatable="false">2</string>
    <string name="num_3" translatable="false">3</string>
    <string name="num_4" translatable="false">4</string>
    <string name="num_5" translatable="false">5</string>
    <string name="num_6" translatable="false">6</string>
    <string name="action_file_share">Share</string>
    <string name="action_list_all">List All</string>
    <string name="searching_wait">Searching&#8230;</string>
    <string name="action_search_web">Search Web</string>
</resources>