<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tools_dialog_textsearch_case_sensitive"
        android:id="@+id/tools_dialog_textsearch_case_sensitive" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tools_dialog_textsearch_wholeword"
        android:id="@+id/tools_dialog_textsearch_wholeword" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tools_dialog_textsearch_regexp"
        android:id="@+id/tools_dialog_textsearch_regex" />
</LinearLayout>