<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="16dp"
    android:theme="@style/CustomAppTheme">

        <RadioButton
            android:id="@+id/tools_dialog_link_external_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dialog_external_link"
            android:checked="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tools_dialog_link_external_edit_text"
            android:inputType="textUri"
            android:imeOptions="actionDone"
            android:hint="@string/dialog_link_example"/>


        <RadioButton
            android:id="@+id/tools_dialog_link_internal_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dialog_internal_link"
            android:checked="false"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tools_dialog_link_internal_edit_text"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:numeric="integer" />

</LinearLayout>