<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/create_stamp_dialog_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:navigationContentDescription="@string/tools_misc_close"
        app:navigationIcon="@drawable/ic_close_white_24dp"
        app:popupTheme="@style/ToolbarPopupTheme"
        app:title="@string/custom_stamp_new" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/stamp_preview_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/stamp_image_height_two_lines"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/stamp_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

            </FrameLayout>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/stamp_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:hint="@string/custom_stamp_text_hint"
                android:imeOptions="actionDone"
                android:maxLength="64"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/primary_text_size"
                app:layout_constraintTop_toBottomOf="@id/stamp_preview_layout" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/date_switch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="@string/date"
                app:layout_constraintTop_toBottomOf="@id/stamp_text" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/time_switch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:text="@string/time"
                app:layout_constraintTop_toBottomOf="@id/date_switch" />

            <TextView
                android:id="@+id/shape_text_view"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:text="@string/shape"
                android:textAppearance="?android:attr/textAppearance"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_switch" />

            <ImageButton
                android:id="@+id/pointing_right_shape"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/annot_property_preview_bg"
                android:contentDescription="@string/custom_stamp_pointing_right"
                app:layout_constraintBottom_toBottomOf="@+id/shape_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/shape_text_view"
                app:srcCompat="@drawable/ic_stamp_right_black_24dp" />

            <ImageButton
                android:id="@+id/pointing_left_shape"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/annot_property_preview_bg"
                android:contentDescription="@string/custom_stamp_pointing_left"
                app:layout_constraintBottom_toBottomOf="@+id/shape_text_view"
                app:layout_constraintEnd_toStartOf="@+id/pointing_right_shape"
                app:layout_constraintTop_toTopOf="@+id/shape_text_view"
                app:srcCompat="@drawable/ic_stamp_left_black_24dp" />

            <ImageButton
                android:id="@+id/rounded_rectangle_shape"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/annot_property_preview_bg"
                android:contentDescription="@string/custom_stamp_rounded_rectangle"
                app:layout_constraintBottom_toBottomOf="@+id/shape_text_view"
                app:layout_constraintEnd_toStartOf="@+id/pointing_left_shape"
                app:layout_constraintTop_toTopOf="@+id/shape_text_view"
                app:srcCompat="@drawable/ic_stamp_rounded_black_24dp" />

            <TextView
                android:id="@+id/color_text_view"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:text="@string/tools_qm_color"
                android:textAppearance="?android:attr/textAppearance"
                android:textSize="@dimen/label_text_size"
                app:layout_constraintBottom_toBottomOf="@+id/stamp_color_recycler"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/stamp_color_recycler" />

            <com.pdftron.pdf.widget.recyclerview.SimpleRecyclerView
                android:id="@+id/stamp_color_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shape_text_view" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</LinearLayout>
